src/test/deca/context/invalid/classes/duplicate_method_same_sig.deca
// Description :
//    Deux méthodes avec même nom et même signature.
//
// Resultats :
//    Erreur contextuelle
//    Ligne 13 : Méthode f déjà définie

class A {
    int f() {
        return 1;
    }

    int f() {
        return 2;
    }
}

{
}

